<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySignup">
    <TextView
        android:id="@+id/signup_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_tag"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/view_title"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/padd"
        android:layout_marginHorizontal="@dimen/margin"
        android:padding="@dimen/padd"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_tag"
        android:hint="@string/signup_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/signup_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/padd"
        android:layout_marginHorizontal="@dimen/margin"
        android:padding="@dimen/padd"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_name"
        android:hint="@string/signup_lastname"
        android:inputType="text"/>
    <EditText
        android:id="@+id/signup_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/padd"
        android:layout_marginHorizontal="@dimen/margin"
        android:padding="@dimen/padd"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_lastname"
        android:hint="@string/signup_bd"
        android:inputType="date"/>
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/padd"
        android:layout_marginHorizontal="@dimen/margin"
        android:padding="@dimen/padd"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_birthday"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/scholarship"
        android:ems="10"
        android:layout_marginTop="@dimen/padd"
        android:layout_marginHorizontal="@dimen/margin"
        android:padding="@dimen/padd"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_email"
        />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/padd"
        android:layout_marginHorizontal="@dimen/margin"
        android:padding="@dimen/padd"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/spinner"
        android:hint="@string/signup_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/activity_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padd"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signup_password"
        android:background="@drawable/rounded_button"
        style="@style/Widget.AppCompat.Button"
        android:padding="@dimen/padd"
        android:text="@string/signup_tag" />

</RelativeLayout>