<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_margin="@dimen/margin"
    android:scrollbarStyle="outsideOverlay"
    android:background="@drawable/border"
    card_view:cardPreventCornerOverlap="false"
    >

    <LinearLayout
        android:id="@+id/item_subject_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/subject_detail_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_subject_detail_thumbnail"
                android:layout_width="@dimen/icon_size"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:src="@drawable/ic_launcher_background"></ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_subject_detail_tutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="Juan López"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/highlight_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_subject_detail_tutor_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="Ingeniero Industrial"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/degree" />

            </LinearLayout>

            <Button
                android:id="@+id/schedule_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/schedule_session" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subject_detail_score_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                tools:text="@string/score" />

            <TextView
                android:id="@+id/item_subject_detail_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextLight"
                tools:text="10/10" />

            <TextView
                android:id="@+id/subject_detail_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/item_subject_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextLight"
                android:textStyle="bold"
                tools:text="Alumno de quinto semestre de ingeniería en redes." />

            <TextView
                android:id="@+id/subject_detail_location_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                tools:text="@string/location" />

            <TextView
                android:id="@+id/item_subject_detail_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextLight"
                android:textStyle="bold"
                tools:text="ITESO" />

            <TextView
                android:id="@+id/subject_detail_phone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                tools:text="@string/phone" />

            <TextView
                android:id="@+id/item_subject_detail_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextLight"
                android:textStyle="bold"
                tools:text="33310000" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>